<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_omokai</name>
  <version>0.1.0</version>
  <description>
    4-wheeled ground robot in Ignition Gazebo (Fortress) with SLAM Toolbox
    online mapping + Nav2 autonomous navigation in unknown environments.
    Inspired by blackcoffeerobotics/bcr_bot, trimmed to the SLAM/navigation
    essentials.
  </description>
  <maintainer email="flamefalcon342516@gmail.com">Amrit</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
